--- a/qtify/public/index.html
+++ b/qtify/public/index.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
 
-    <title>React App</title>
+    <title>Qtify-Ayesha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
